--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -28,15 +28,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19T23:16:51.803-0700\tconnected to: mongodb://localhost/\n",
+      "2023-05-19T23:16:51.805-0700\tdropping: uk_food.establishments\n",
+      "2023-05-19T23:16:54.804-0700\t[######################..] uk_food.establishments\t37.6MB/39.3MB (95.7%)\n",
+      "2023-05-19T23:16:54.943-0700\t[########################] uk_food.establishments\t39.3MB/39.3MB (100.0%)\n",
+      "2023-05-19T23:16:54.943-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the dataset\n",
+    "!mongoimport --type json -d uk_food -c establishments --drop --jsonArray Resources/establishments.json"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "PythonData",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
