--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -47,6 +47,17 @@
     "# Import the dataset\n",
     "!mongoimport --type json -d uk_food -c establishments --drop --jsonArray Resources/establishments.json"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dependencies\n",
+    "from pymongo import MongoClient\n",
+    "from pprint import pprint"
+   ]
   }
  ],
  "metadata": {
