--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -58,6 +58,16 @@
     "from pymongo import MongoClient\n",
     "from pprint import pprint"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of MongoClient\n",
+    "mongo = MongoClient(port=27017)"
+   ]
   }
  ],
  "metadata": {
