confirm presence of new db

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -68,6 +68,29 @@
     "# Create an instance of MongoClient\n",
     "mongo = MongoClient(port=27017)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database found: uk_food\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confirm presence of new database\n",
+    "db_names = mongo.list_database_names()\n",
+    "db_to_check = \"uk_food\"\n",
+    "if db_to_check in db_names:\n",
+    "    print(f\"Database found: {db_to_check}\")\n",
+    "else:\n",
+    "    print(\"Database not found\")"
+   ]
   }
  ],
  "metadata": {
