assign new db to variable

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -91,6 +91,16 @@
     "else:\n",
     "    print(\"Database not found\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign new database to a variable\n",
+    "db = mongo[\"uk_food\"]"
+   ]
   }
  ],
  "metadata": {
