list the collections in the new db

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -101,6 +101,27 @@
     "# Assign new database to a variable\n",
     "db = mongo[\"uk_food\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List the collections in the new database\n",
+    "db.list_collection_names()"
+   ]
   }
  ],
  "metadata": {
