--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -122,6 +122,60 @@
     "# List the collections in the new database\n",
     "db.list_collection_names()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Refreshment Kiosk',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 254719,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-03-24T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('646865d3076073219f6a8a7e'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print a document from the establishments collection\n",
+    "one_doc = db.establishments.find_one()\n",
+    "pprint(one_doc)"
+   ]
   }
  ],
  "metadata": {
