assign collection to variable

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -176,6 +176,16 @@
     "one_doc = db.establishments.find_one()\n",
     "pprint(one_doc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign the collection to a variable\n",
+    "establishments = db[\"establishments\"]"
+   ]
   }
  ],
  "metadata": {
