dictionary for new restaurant

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -186,6 +186,53 @@
     "# Assign the collection to a variable\n",
     "establishments = db[\"establishments\"]"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: Update the Database"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insert the new halal restaurant \"Penang Flavours\" into the database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary for the new restaurant\n",
+    "penang_dict = {\"BusinessName\":\"Penang Flavours\",\n",
+    "               \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "               \"BusinessTypeID\":\"\",\n",
+    "               \"AddressLine1\":\"Penang Flavours\",\n",
+    "               \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "               \"AddressLine3\":\"London\",\n",
+    "               \"AddressLine4\":\"\",\n",
+    "               \"PostCode\":\"SE18 7DY\",\n",
+    "               \"Phone\":\"\",\n",
+    "               \"LocalAuthorityCode\":\"511\",\n",
+    "               \"LocalAuthorityName\":\"Greenwich\",\n",
+    "               \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "               \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "               \"scores\":{\"Hygiene\":\"\",\n",
+    "                         \"Structural\":\"\",\n",
+    "                         \"ConfidenceInManagement\":\"\"},\n",
+    "               \"SchemeType\":\"FHRS\",\n",
+    "               \"geocode\":{\"longitude\":\"0.08384000\",\n",
+    "                          \"latitude\":\"51.49014200\"},\n",
+    "               \"RightToReply\":\"\",\n",
+    "               \"Distance\":4623.9723280747176,\n",
+    "               \"NewRatingPending\":True}"
+   ]
   }
  ],
  "metadata": {
