insert new restaurant

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -233,6 +233,27 @@
     "               \"Distance\":4623.9723280747176,\n",
     "               \"NewRatingPending\":True}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x1cadd05ec40>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(penang_dict)"
+   ]
   }
  ],
  "metadata": {
