--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -254,6 +254,45 @@
     "# Insert the new restaurant into the collection\n",
     "establishments.insert_one(penang_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('64687a738e7c627e31c1ef94'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confirm insertion\n",
+    "query = {'BusinessName': 'Penang Flavours'}\n",
+    "results = establishments.find_one(query)\n",
+    "pprint(results)"
+   ]
   }
  ],
  "metadata": {
