--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -289,7 +289,7 @@
    ],
    "source": [
     "# Confirm insertion\n",
-    "query = {'BusinessName': 'Penang Flavours'}\n",
+    "query = {\"BusinessName\": \"Penang Flavours\"}\n",
     "results = establishments.find_one(query)\n",
     "pprint(results)"
    ]
