find business_type_id for new restaurant

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -293,6 +293,30 @@
     "results = establishments.find_one(query)\n",
     "pprint(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('646865d3076073219f6a8a7e'), 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\"\n",
+    "query = {\"BusinessType\":\"Restaurant/Cafe/Canteen\"}\n",
+    "fields = {\"BusinessType\":1,\n",
+    "          \"BusinessTypeID\":1}\n",
+    "results = establishments.find_one(query,fields)\n",
+    "business_type = results[\"BusinessType\"]\n",
+    "business_type_id = results[\"BusinessTypeID\"]\n",
+    "print(results)"
+   ]
   }
  ],
  "metadata": {
