--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -295,15 +295,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('646865d3076073219f6a8a7e'), 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
+      "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " '_id': ObjectId('646865d3076073219f6a8a7e')}\n"
      ]
     }
    ],
@@ -315,7 +325,7 @@
     "results = establishments.find_one(query,fields)\n",
     "business_type = results[\"BusinessType\"]\n",
     "business_type_id = results[\"BusinessTypeID\"]\n",
-    "print(results)"
+    "pprint(results)"
    ]
   }
  ],
