update new restaurant's business_type_id

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -327,6 +327,37 @@
     "business_type_id = results[\"BusinessTypeID\"]\n",
     "pprint(results)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Update the new restaurant with the `BusinessTypeID` you found."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1cae01cd640>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Update the new restaurant's BusinessTypeID\n",
+    "query = {\"BusinessName\":\"Penang Flavours\"}\n",
+    "fields = {\"$set\":{\"BusinessTypeID\":business_type_id}}\n",
+    "establishments.update_one(query,fields)"
+   ]
   }
  ],
  "metadata": {
