--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Update the new restaurant with the `BusinessTypeID` you found."
+    "3. Update the new restaurant's `BusinessTypeID`"
    ]
   },
   {
