confirm the updated business_type_id for new restaurant

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -358,6 +358,27 @@
     "fields = {\"$set\":{\"BusinessTypeID\":business_type_id}}\n",
     "establishments.update_one(query,fields)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BusinessTypeID': 1, '_id': ObjectId('64687a738e7c627e31c1ef94')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confirm the update\n",
+    "query = {\"BusinessName\":\"Penang Flavours\"}\n",
+    "fields = {\"BusinessTypeID\":10}\n",
+    "results = establishments.find_one(query,fields)\n",
+    "pprint(results)"
+   ]
   }
  ],
  "metadata": {
