count documents in dover

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -379,6 +379,36 @@
     "results = establishments.find_one(query,fields)\n",
     "pprint(results)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Remove any establishments within the Dover Local Authority from the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "994"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count the documents with LocalAuthorityName Dover\n",
+    "query = {\"LocalAuthorityName\":\"Dover\"}\n",
+    "establishments.count_documents(query)"
+   ]
   }
  ],
  "metadata": {
