--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -409,6 +409,28 @@
     "query = {\"LocalAuthorityName\":\"Dover\"}\n",
     "establishments.count_documents(query)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x1cae0325740>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete documents with LocalAuthorityName Dover\n",
+    "query = {\"LocalAuthorityName\":\"Dover\"}\n",
+    "establishments.delete_many(query)"
+   ]
   }
  ],
  "metadata": {
