--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -431,6 +431,28 @@
     "query = {\"LocalAuthorityName\":\"Dover\"}\n",
     "establishments.delete_many(query)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confirm deletion\n",
+    "query = {\"LocalAuthorityName\":\"Dover\"}\n",
+    "establishments.count_documents(query)"
+   ]
   }
  ],
  "metadata": {
