--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -507,6 +507,45 @@
     "result = establishments.find_one()\n",
     "pprint(result)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Update data types"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert `latitude` and `longitude` to decimal numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the data types for latitude and longitude\n",
+    "results = establishments.find_one()\n",
+    "latitude = results[\"geocode\"][\"latitude\"]\n",
+    "longitude = results[\"geocode\"][\"longitude\"]\n",
+    "pprint(type(latitude))\n",
+    "pprint(type(longitude))"
+   ]
   }
  ],
  "metadata": {
