--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -546,6 +546,33 @@
     "pprint(type(latitude))\n",
     "pprint(type(longitude))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1cae035d080>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert latitude and longitude to double\n",
+    "query = {}\n",
+    "\n",
+    "update = [{\"$set\":{\"geocode.latitude\":{\"$toDouble\":\"$geocode.latitude\"}}}]\n",
+    "establishments.update_many(query,update)\n",
+    "\n",
+    "update = [{\"$set\":{\"geocode.longitude\":{\"$toDouble\":\"$geocode.longitude\"}}}]\n",
+    "establishments.update_many(query,update)"
+   ]
   }
  ],
  "metadata": {
