check data type for rating_value

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -573,6 +573,34 @@
     "update = [{\"$set\":{\"geocode.longitude\":{\"$toDouble\":\"$geocode.longitude\"}}}]\n",
     "establishments.update_many(query,update)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert `RatingValue` to integer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the data type for RatingValue\n",
+    "results = establishments.find_one()\n",
+    "rating_value = results[\"RatingValue\"]\n",
+    "pprint(type(rating_value))"
+   ]
   }
  ],
  "metadata": {
