set non 1-5 rating_values to null

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -601,6 +601,34 @@
     "rating_value = results[\"RatingValue\"]\n",
     "pprint(type(rating_value))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1cae1baae00>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set non 1-5 Rating Values to Null\n",
+    "non_ratings = [\"AwaitingInspection\",\n",
+    "               \"Awaiting Inspection\",\n",
+    "               \"AwaitingPublication\",\n",
+    "               \"Pass\",\n",
+    "               \"Exempt\"]\n",
+    "query = {\"RatingValue\":{\"$in\":non_ratings}}\n",
+    "update = [{\"$set\":{\"RatingValue\":None}}]\n",
+    "establishments.update_many(query,update)"
+   ]
   }
  ],
  "metadata": {
