convert rating_value to integer

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -629,6 +629,29 @@
     "update = [{\"$set\":{\"RatingValue\":None}}]\n",
     "establishments.update_many(query,update)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1cae0eb7940>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert RatingValue to integer\n",
+    "query = {}\n",
+    "update = [{\"$set\":{\"RatingValue\":{\"$toInt\":\"$RatingValue\"}}}]\n",
+    "establishments.update_many(query,update)"
+   ]
   }
  ],
  "metadata": {
