confirm the data type updates

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -652,6 +652,40 @@
     "update = [{\"$set\":{\"RatingValue\":{\"$toInt\":\"$RatingValue\"}}}]\n",
     "establishments.update_many(query,update)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the data types for `latitude`, `longitude`, and `RatingValue`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confirm the data type updates\n",
+    "results = establishments.find_one()\n",
+    "latitude = results[\"geocode\"][\"latitude\"]\n",
+    "longitude = results[\"geocode\"][\"longitude\"]\n",
+    "rating_value = results[\"RatingValue\"]\n",
+    "pprint(type(latitude))\n",
+    "pprint(type(longitude))\n",
+    "pprint(type(rating_value))"
+   ]
   }
  ],
  "metadata": {
