refactoring data type confirmation

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -663,28 +663,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'float'>\n",
-      "<class 'float'>\n",
-      "<class 'int'>\n"
+      "'double'\n",
+      "'double'\n",
+      "'int'\n"
      ]
     }
    ],
    "source": [
     "# Confirm the data type updates\n",
-    "results = establishments.find_one()\n",
-    "latitude = results[\"geocode\"][\"latitude\"]\n",
-    "longitude = results[\"geocode\"][\"longitude\"]\n",
+    "query = {}\n",
+    "\n",
+    "check = {\"geocode.latitude\":{\"$type\":\"$geocode.latitude\"},\n",
+    "         \"geocode.longitude\":{\"$type\":\"$geocode.longitude\"},\n",
+    "         \"RatingValue\":{\"$type\":\"$RatingValue\"}}\n",
+    "\n",
+    "results = establishments.find_one(query,check)\n",
+    "\n",
+    "latitude_type = results[\"geocode\"][\"latitude\"]\n",
+    "longitude_type = results[\"geocode\"][\"longitude\"]\n",
     "rating_value = results[\"RatingValue\"]\n",
-    "pprint(type(latitude))\n",
-    "pprint(type(longitude))\n",
-    "pprint(type(rating_value))"
+    "\n",
+    "pprint(latitude)\n",
+    "pprint(longitude)\n",
+    "pprint(rating_value)"
    ]
   }
  ],
