refactoring data type confirmation

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -688,10 +688,10 @@
     "\n",
     "latitude_type = results[\"geocode\"][\"latitude\"]\n",
     "longitude_type = results[\"geocode\"][\"longitude\"]\n",
-    "rating_value = results[\"RatingValue\"]\n",
+    "rating_value_type = results[\"RatingValue\"]\n",
     "\n",
-    "pprint(latitude)\n",
-    "pprint(longitude)\n",
+    "pprint(latitude_type)\n",
+    "pprint(longitude_type)\n",
     "pprint(rating_value)"
    ]
   }
