fixed typo in variable name

--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
     "\n",
     "pprint(latitude_type)\n",
     "pprint(longitude_type)\n",
-    "pprint(rating_value)"
+    "pprint(rating_value_type)"
    ]
   }
  ],
