--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -35,11 +35,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-19T23:16:51.803-0700\tconnected to: mongodb://localhost/\n",
-      "2023-05-19T23:16:51.805-0700\tdropping: uk_food.establishments\n",
-      "2023-05-19T23:16:54.804-0700\t[######################..] uk_food.establishments\t37.6MB/39.3MB (95.7%)\n",
-      "2023-05-19T23:16:54.943-0700\t[########################] uk_food.establishments\t39.3MB/39.3MB (100.0%)\n",
-      "2023-05-19T23:16:54.943-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+      "2023-05-20T02:50:44.515-0700\tconnected to: mongodb://localhost/\n",
+      "2023-05-20T02:50:44.518-0700\tdropping: uk_food.establishments\n",
+      "2023-05-20T02:50:47.317-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
      ]
     }
    ],
@@ -85,7 +83,9 @@
    "source": [
     "# Confirm presence of new database\n",
     "db_names = mongo.list_database_names()\n",
+    "\n",
     "db_to_check = \"uk_food\"\n",
+    "\n",
     "if db_to_check in db_names:\n",
     "    print(f\"Database found: {db_to_check}\")\n",
     "else:\n",
@@ -136,13 +136,13 @@
       " 'AddressLine2': 'St Margarets Bay',\n",
       " 'AddressLine3': 'Kent',\n",
       " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Refreshment Kiosk',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      " 'BusinessName': 'The Coastguard Inn',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
       " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 254719,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
+      " 'FHRSID': 1034540,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
@@ -150,14 +150,14 @@
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-03-24T00:00:00',\n",
+      " 'RatingDate': '2022-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646865d3076073219f6a8a7e'),\n",
+      " '_id': ObjectId('646897f4d664dec15dbbcb9c'),\n",
       " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -167,7 +167,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1cadd05ec40>"
+       "<pymongo.results.InsertOneResult at 0x19355ddc680>"
       ]
      },
      "execution_count": 10,
@@ -281,7 +281,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64687a738e7c627e31c1ef94'),\n",
+      " '_id': ObjectId('646897f8d6cd0486c4fe3767'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -290,7 +290,9 @@
    "source": [
     "# Confirm insertion\n",
     "query = {\"BusinessName\": \"Penang Flavours\"}\n",
+    "\n",
     "results = establishments.find_one(query)\n",
+    "\n",
     "pprint(results)"
    ]
   },
@@ -299,12 +301,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the `BusinessTypeID` and `BusinessType` fields."
+    "2. Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return the `BusinessTypeID` and `BusinessType` fields."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,19 +315,23 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('646865d3076073219f6a8a7e')}\n"
+      " '_id': ObjectId('646897f4d664dec15dbbcb9e')}\n"
      ]
     }
    ],
    "source": [
     "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\"\n",
     "query = {\"BusinessType\":\"Restaurant/Cafe/Canteen\"}\n",
+    "\n",
     "fields = {\"BusinessType\":1,\n",
     "          \"BusinessTypeID\":1}\n",
+    "\n",
     "results = establishments.find_one(query,fields)\n",
-    "business_type = results[\"BusinessType\"]\n",
-    "business_type_id = results[\"BusinessTypeID\"]\n",
-    "pprint(results)"
+    "\n",
+    "pprint(results)\n",
+    "\n",
+    "# Save the BusinessTypeID to a variable\n",
+    "business_type_id = results[\"BusinessTypeID\"]"
    ]
   },
   {
@@ -338,13 +344,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BusinessTypeID': '', '_id': ObjectId('646897f8d6cd0486c4fe3767')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the new restaurant's BusinessTypeID\n",
+    "query = {\"BusinessName\":\"Penang Flavours\"}\n",
+    "\n",
+    "fields = {\"BusinessTypeID\":1}\n",
+    "\n",
+    "results = establishments.find_one(query,fields)\n",
+    "\n",
+    "pprint(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1cae01cd640>"
+       "<pymongo.results.UpdateResult at 0x19355f4f7c0>"
       ]
      },
      "execution_count": 14,
@@ -355,7 +385,9 @@
    "source": [
     "# Update the new restaurant's BusinessTypeID\n",
     "query = {\"BusinessName\":\"Penang Flavours\"}\n",
+    "\n",
     "fields = {\"$set\":{\"BusinessTypeID\":business_type_id}}\n",
+    "\n",
     "establishments.update_one(query,fields)"
    ]
   },
@@ -368,15 +400,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessTypeID': 1, '_id': ObjectId('64687a738e7c627e31c1ef94')}\n"
+      "{'BusinessTypeID': 1, '_id': ObjectId('646897f8d6cd0486c4fe3767')}\n"
      ]
     }
    ],
    "source": [
     "# Confirm the update\n",
     "query = {\"BusinessName\":\"Penang Flavours\"}\n",
-    "fields = {\"BusinessTypeID\":10}\n",
+    "\n",
+    "fields = {\"BusinessTypeID\":1}\n",
+    "\n",
     "results = establishments.find_one(query,fields)\n",
+    "\n",
     "pprint(results)"
    ]
   },
@@ -418,7 +453,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1cae0325740>"
+       "<pymongo.results.DeleteResult at 0x193546cf200>"
       ]
      },
      "execution_count": 17,
@@ -486,7 +521,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646865d3076073219f6a8d62'),\n",
+      " '_id': ObjectId('646897f4d664dec15dbbce82'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -503,7 +538,7 @@
     }
    ],
    "source": [
-    "# Verify that all documents weren't deleted\n",
+    "# Verify that non Dover documents are still present\n",
     "result = establishments.find_one()\n",
     "pprint(result)"
    ]
@@ -533,32 +568,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "<class 'str'>\n"
+      "'string'\n",
+      "'string'\n"
      ]
     }
    ],
    "source": [
     "# Check the data types for latitude and longitude\n",
-    "results = establishments.find_one()\n",
-    "latitude = results[\"geocode\"][\"latitude\"]\n",
-    "longitude = results[\"geocode\"][\"longitude\"]\n",
-    "pprint(type(latitude))\n",
-    "pprint(type(longitude))"
+    "query = {}\n",
+    "\n",
+    "check = {\"geocode.latitude\":{\"$type\":\"$geocode.latitude\"},\n",
+    "         \"geocode.longitude\":{\"$type\":\"$geocode.longitude\"}}\n",
+    "\n",
+    "results = establishments.find_one(query,check)\n",
+    "\n",
+    "latitude_type = results[\"geocode\"][\"latitude\"]\n",
+    "longitude_type = results[\"geocode\"][\"longitude\"]\n",
+    "\n",
+    "pprint(latitude_type)\n",
+    "pprint(longitude_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1cae035d080>"
+       "<pymongo.results.UpdateResult at 0x19353e04fc0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,10 +609,9 @@
     "# Convert latitude and longitude to double\n",
     "query = {}\n",
     "\n",
-    "update = [{\"$set\":{\"geocode.latitude\":{\"$toDouble\":\"$geocode.latitude\"}}}]\n",
-    "establishments.update_many(query,update)\n",
+    "update = [{\"$set\":{\"geocode.latitude\":{\"$toDouble\":\"$geocode.latitude\"},\n",
+    "                   \"geocode.longitude\":{\"$toDouble\":\"$geocode.longitude\"}}}]\n",
     "\n",
-    "update = [{\"$set\":{\"geocode.longitude\":{\"$toDouble\":\"$geocode.longitude\"}}}]\n",
     "establishments.update_many(query,update)"
    ]
   },
@@ -584,36 +625,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n"
+      "'string'\n"
      ]
     }
    ],
    "source": [
     "# Check the data type for RatingValue\n",
-    "results = establishments.find_one()\n",
-    "rating_value = results[\"RatingValue\"]\n",
-    "pprint(type(rating_value))"
+    "query = {}\n",
+    "\n",
+    "check = {\"RatingValue\":{\"$type\":\"$RatingValue\"}}\n",
+    "\n",
+    "results = establishments.find_one(query,check)\n",
+    "\n",
+    "rating_value_type = results[\"RatingValue\"]\n",
+    "\n",
+    "pprint(rating_value_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1cae1baae00>"
+       "<pymongo.results.UpdateResult at 0x19355f4f140>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,23 +672,26 @@
     "               \"AwaitingPublication\",\n",
     "               \"Pass\",\n",
     "               \"Exempt\"]\n",
+    "\n",
     "query = {\"RatingValue\":{\"$in\":non_ratings}}\n",
+    "\n",
     "update = [{\"$set\":{\"RatingValue\":None}}]\n",
+    "\n",
     "establishments.update_many(query,update)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1cae0eb7940>"
+       "<pymongo.results.UpdateResult at 0x19355f3bb80>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +699,9 @@
    "source": [
     "# Convert RatingValue to integer\n",
     "query = {}\n",
+    "\n",
     "update = [{\"$set\":{\"RatingValue\":{\"$toInt\":\"$RatingValue\"}}}]\n",
+    "\n",
     "establishments.update_many(query,update)"
    ]
   },
@@ -663,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
