--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -35,9 +35,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-20T02:50:44.515-0700\tconnected to: mongodb://localhost/\n",
-      "2023-05-20T02:50:44.518-0700\tdropping: uk_food.establishments\n",
-      "2023-05-20T02:50:47.317-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+      "2023-05-20T03:20:35.936-0700\tconnected to: mongodb://localhost/\n",
+      "2023-05-20T03:20:35.940-0700\tdropping: uk_food.establishments\n",
+      "2023-05-20T03:20:38.585-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
      ]
     }
    ],
@@ -76,6 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['admin', 'autosaurus', 'classDB', 'config', 'gardenDB', 'local', 'met', 'uk_food']\n",
+      "--------------------\n",
       "Database found: uk_food\n"
      ]
     }
@@ -86,8 +88,13 @@
     "\n",
     "db_to_check = \"uk_food\"\n",
     "\n",
+    "print(db_names)\n",
+    "\n",
+    "print(\"-\"*20)\n",
+    "\n",
     "if db_to_check in db_names:\n",
     "    print(f\"Database found: {db_to_check}\")\n",
+    "    \n",
     "else:\n",
     "    print(\"Database not found\")"
    ]
@@ -132,32 +139,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Bay',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'The Coastguard Inn',\n",
-      " 'BusinessType': 'Pub/bar/nightclub',\n",
-      " 'BusinessTypeID': 7843,\n",
+      "{'AddressLine1': 'The Pines Garden',\n",
+      " 'AddressLine2': 'Beach Road',\n",
+      " 'AddressLine3': 'St Margarets Bay',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Tea Room',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 1034540,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'Distance': 4587.362402580997,\n",
+      " 'FHRSID': 551803,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000070948',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-08-17T00:00:00',\n",
+      " 'PostCode': 'CT15 6DZ',\n",
+      " 'RatingDate': '2021-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646897f4d664dec15dbbcb9c'),\n",
-      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
+      " '_id': ObjectId('64689ef4d8a67dba6547b4c7'),\n",
+      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/551803',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -167,7 +174,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -242,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x19355ddc680>"
+       "<pymongo.results.InsertOneResult at 0x1c21b980440>"
       ]
      },
      "execution_count": 10,
@@ -281,7 +288,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646897f8d6cd0486c4fe3767'),\n",
+      " '_id': ObjectId('64689ef74f0d3941ab8507f0'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -315,7 +322,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('646897f4d664dec15dbbcb9e')}\n"
+      " '_id': ObjectId('64689ef4d8a67dba6547b4c7')}\n"
      ]
     }
    ],
@@ -351,7 +358,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessTypeID': '', '_id': ObjectId('646897f8d6cd0486c4fe3767')}\n"
+      "{'BusinessTypeID': '', '_id': ObjectId('64689ef74f0d3941ab8507f0')}\n"
      ]
     }
    ],
@@ -374,7 +381,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x19355f4f7c0>"
+       "<pymongo.results.UpdateResult at 0x1c21ebdb6c0>"
       ]
      },
      "execution_count": 14,
@@ -400,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessTypeID': 1, '_id': ObjectId('646897f8d6cd0486c4fe3767')}\n"
+      "{'BusinessTypeID': 1, '_id': ObjectId('64689ef74f0d3941ab8507f0')}\n"
      ]
     }
    ],
@@ -453,7 +460,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x193546cf200>"
+       "<pymongo.results.DeleteResult at 0x1c21ec2f780>"
       ]
      },
      "execution_count": 17,
@@ -521,7 +528,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('646897f4d664dec15dbbce82'),\n",
+      " '_id': ObjectId('64689ef4d8a67dba6547b7ae'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -597,7 +604,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x19353e04fc0>"
+       "<pymongo.results.UpdateResult at 0x1c21ce86bc0>"
       ]
      },
      "execution_count": 21,
@@ -657,7 +664,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x19355f4f140>"
+       "<pymongo.results.UpdateResult at 0x1c21ce84c80>"
       ]
      },
      "execution_count": 23,
@@ -688,7 +695,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x19355f3bb80>"
+       "<pymongo.results.UpdateResult at 0x1c21ebdb400>"
       ]
      },
      "execution_count": 24,
