--- a/UK-Food-Analysis/setup.ipynb
+++ b/UK-Food-Analysis/setup.ipynb
@@ -35,9 +35,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-20T03:20:35.936-0700\tconnected to: mongodb://localhost/\n",
-      "2023-05-20T03:20:35.940-0700\tdropping: uk_food.establishments\n",
-      "2023-05-20T03:20:38.585-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
+      "2023-05-20T11:51:56.448-0700\tconnected to: mongodb://localhost/\n",
+      "2023-05-20T11:51:56.451-0700\tdropping: uk_food.establishments\n",
+      "2023-05-20T11:51:59.448-0700\t[##############..........] uk_food.establishments\t24.1MB/39.3MB (61.3%)\n",
+      "2023-05-20T11:52:01.434-0700\t[########################] uk_food.establishments\t39.3MB/39.3MB (100.0%)\n",
+      "2023-05-20T11:52:01.434-0700\t39779 document(s) imported successfully. 0 document(s) failed to import.\n"
      ]
     }
    ],
@@ -162,7 +164,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64689ef4d8a67dba6547b4c7'),\n",
+      " '_id': ObjectId('646916cce3d80959eab93707'),\n",
       " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/551803',\n",
       "            'rel': 'self'}],\n",
@@ -249,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1c21b980440>"
+       "<pymongo.results.InsertOneResult at 0x2a11a814680>"
       ]
      },
      "execution_count": 10,
@@ -288,7 +290,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64689ef74f0d3941ab8507f0'),\n",
+      " '_id': ObjectId('646916d36f66d8fdd8261174'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -322,7 +324,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('64689ef4d8a67dba6547b4c7')}\n"
+      " '_id': ObjectId('646916cce3d80959eab93707')}\n"
      ]
     }
    ],
@@ -358,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessTypeID': '', '_id': ObjectId('64689ef74f0d3941ab8507f0')}\n"
+      "{'BusinessTypeID': '', '_id': ObjectId('646916d36f66d8fdd8261174')}\n"
      ]
     }
    ],
@@ -381,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c21ebdb6c0>"
+       "<pymongo.results.UpdateResult at 0x2a11c577840>"
       ]
      },
      "execution_count": 14,
@@ -407,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessTypeID': 1, '_id': ObjectId('64689ef74f0d3941ab8507f0')}\n"
+      "{'BusinessTypeID': 1, '_id': ObjectId('646916d36f66d8fdd8261174')}\n"
      ]
     }
    ],
@@ -460,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1c21ec2f780>"
+       "<pymongo.results.DeleteResult at 0x2a11c5a8e00>"
       ]
      },
      "execution_count": 17,
@@ -528,7 +530,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64689ef4d8a67dba6547b7ae'),\n",
+      " '_id': ObjectId('646916cce3d80959eab939ec'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -604,7 +606,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c21ce86bc0>"
+       "<pymongo.results.UpdateResult at 0x2a11c5c6c00>"
       ]
      },
      "execution_count": 21,
@@ -664,7 +666,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c21ce84c80>"
+       "<pymongo.results.UpdateResult at 0x2a11c5a8dc0>"
       ]
      },
      "execution_count": 23,
@@ -695,7 +697,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c21ebdb400>"
+       "<pymongo.results.UpdateResult at 0x2a11c5d1b80>"
       ]
      },
      "execution_count": 24,
