--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -27,6 +27,16 @@
     "from pprint import pprint\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of MongoClient\n",
+    "mongo = MongoClient(port=27017)"
+   ]
   }
  ],
  "metadata": {
