list collections in db

--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -47,6 +47,27 @@
     "# assign the uk_food database to a variable name\n",
     "db = mongo['uk_food']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# review the collections in the database\n",
+    "db.list_collection_names()"
+   ]
   }
  ],
  "metadata": {
