assign collection to variable

--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -68,6 +68,16 @@
     "# review the collections in the database\n",
     "db.list_collection_names()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# assign the collection to a variable\n",
+    "establishments = db['establishments']"
+   ]
   }
  ],
  "metadata": {
