coordinates for new restaurant

--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -1216,6 +1216,40 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. What are the top 5 establishments with a `RatingValue` rating value of 5, sorted by lowest hygiene score, nearest to the new restaurant added, \"Penang Flavours\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.490142\n",
+      "0.08384\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Coordiantes for Penang Flavours\n",
+    "query = {\"BusinessName\":\"Penang Flavours\"}\n",
+    "result = establishments.find_one(query)\n",
+    "\n",
+    "latitude = result[\"geocode\"][\"latitude\"]\n",
+    "longitude = result[\"geocode\"][\"longitude\"]\n",
+    "\n",
+    "print(latitude)\n",
+    "print(longitude)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
