--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -1251,10 +1251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Search radius\n",
+    "degree_search = 0.01\n",
+    "\n",
+    "lat_max = latitude+degree_search\n",
+    "lat_min = latitude-degree_search\n",
+    "\n",
+    "lon_max = longitude+degree_search\n",
+    "long_min = longitude-degree_search"
+   ]
   }
  ],
  "metadata": {
