--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -1282,7 +1282,10 @@
     "\n",
     "limit = 5\n",
     "\n",
-    "radius_result = establishments.find(radius_query).sort(sort_by,sort_order).limit(limit)"
+    "radius_result = establishments.\\\n",
+    "                find(radius_query).\\\n",
+    "                sort(sort_by,sort_order).\\\n",
+    "                limit(limit)"
    ]
   },
   {
@@ -1550,6 +1553,199 @@
     "# Convert result into a Pandas DataFrame\n",
     "radius_df = pd.DataFrame(radius_result)\n",
     "radius_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. How many establishments in each Local Authority area have a hygiene score of 0?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of establishments in result: 55\n",
+      "[{'_id': 'Thanet', 'count': 1130},\n",
+      " {'_id': 'Greenwich', 'count': 882},\n",
+      " {'_id': 'Maidstone', 'count': 713},\n",
+      " {'_id': 'Newham', 'count': 711},\n",
+      " {'_id': 'Swale', 'count': 686},\n",
+      " {'_id': 'Chelmsford', 'count': 680},\n",
+      " {'_id': 'Medway', 'count': 672},\n",
+      " {'_id': 'Bexley', 'count': 607},\n",
+      " {'_id': 'Southend-On-Sea', 'count': 586},\n",
+      " {'_id': 'Tendring', 'count': 542}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pipeline: \n",
+    "# 1. Match establishments with a hygiene score of 0\n",
+    "match_query = {\"$match\":{\"scores.Hygiene\": 0}}\n",
+    "\n",
+    "# 2. Group matches by LocalAuthorityName\n",
+    "group_query = {\"$group\":{\"_id\":\"$LocalAuthorityName\",\n",
+    "                         \"count\":{\"$sum\":1}}}\n",
+    "\n",
+    "# 3. Sort matches in descending order\n",
+    "sort_values = {\"$sort\":{\"count\":-1}}\n",
+    "\n",
+    "# 4. Assemble pipeline\n",
+    "pipeline = [match_query,group_query,sort_values]\n",
+    "\n",
+    "# 5. Execute aggregation\n",
+    "good_hygiene_results = list(establishments.aggregate(pipeline))\n",
+    "\n",
+    "# Print the number of documents in the result\n",
+    "print(f\"Number of establishments in result: {len(good_hygiene_results)}\")\n",
+    "\n",
+    "# Print the first 10 results\n",
+    "pprint(good_hygiene_results[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the result to a Pandas DataFrame\n",
+    "good_hygiene_df = pd.DataFrame(good_hygiene_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the number of rows in the DataFrame\n",
+    "print(\"Rows in DataFrame: \",len(good_hygiene_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thanet</td>\n",
+       "      <td>1130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greenwich</td>\n",
+       "      <td>882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maidstone</td>\n",
+       "      <td>713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Newham</td>\n",
+       "      <td>711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swale</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chelmsford</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Medway</td>\n",
+       "      <td>672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bexley</td>\n",
+       "      <td>607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Southend-On-Sea</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tendring</td>\n",
+       "      <td>542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               _id  count\n",
+       "0           Thanet   1130\n",
+       "1        Greenwich    882\n",
+       "2        Maidstone    713\n",
+       "3           Newham    711\n",
+       "4            Swale    686\n",
+       "5       Chelmsford    680\n",
+       "6           Medway    672\n",
+       "7           Bexley    607\n",
+       "8  Southend-On-Sea    586\n",
+       "9         Tendring    542"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the first 10 rows of the DataFrame\n",
+    "good_hygiene_df.head(10)"
    ]
   }
  ],
