--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -167,7 +167,7 @@
    ],
    "source": [
     "# Display the first document\n",
-    "first_hygiene_20 = establishments.find_one(query)\n",
+    "first_hygiene_20 = hygiene_20[0]\n",
     "pprint(first_hygiene_20)"
    ]
   },
@@ -730,7 +730,7 @@
    ],
    "source": [
     "# Display the first document\n",
-    "first_london_results = establishments.find_one(london_query)\n",
+    "first_london_results = london_results[0]\n",
     "pprint(first_london_results)"
    ]
   },
@@ -1589,7 +1589,7 @@
    "source": [
     "# Pipeline: \n",
     "# 1. Match establishments with a hygiene score of 0\n",
-    "match_query = {\"$match\":{\"scores.Hygiene\": 0}}\n",
+    "match_query = {\"$match\":{\"scores.Hygiene\":0}}\n",
     "\n",
     "# 2. Group matches by LocalAuthorityName\n",
     "group_query = {\"$group\":{\"_id\":\"$LocalAuthorityName\",\n",
@@ -1608,7 +1608,8 @@
     "print(f\"Number of establishments in result: {len(good_hygiene_results)}\")\n",
     "\n",
     "# Print the first 10 results\n",
-    "pprint(good_hygiene_results[0:10])"
+    "first_ten = good_hygiene_results[0:10]\n",
+    "pprint(first_ten)"
    ]
   },
   {
