--- a/UK-Food-Analysis/analysis.ipynb
+++ b/UK-Food-Analysis/analysis.ipynb
@@ -1938,13 +1938,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows in the DataFrame:  55\n"
+      "Rows in the DataFrame: 55\n"
      ]
     }
    ],
    "source": [
     "# Display the number of rows in the DataFrame\n",
-    "print(\"Rows in the DataFrame: \",len(good_hygiene_df))"
+    "print(f\"Rows in the DataFrame: {len(good_hygiene_df)}\")"
    ]
   },
   {
